<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassCreationFrag">

    <TextView
        android:id="@+id/AddText"
        android:layout_width="64dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:editable="false"
        android:ems="10"
        android:inputType="text"
        android:text="@string/AddText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="338dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ClassNameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/ClassNameHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="338dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ProfessorInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/ProfessorHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="338dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:startIconTint="#FFFFFF">

        <LinearLayout
            android:id="@+id/timePickerButton"
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/StartTimeButton11111"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="@color/white"
                android:text="Start Time"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:layout_marginRight="10dp"
                android:textSize="25dp" />

            <Button
                android:id="@+id/EndTimeBtn1111"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:background="@color/white"
                android:text="End Time"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="25dp" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="338dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.163">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LocationInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/LocationHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/bottomButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/HomeButtonForClassCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/ExamButtonForClassCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exams" />

        <Button
            android:id="@+id/TODOButtonForClassCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TODO" />

        <Button
            android:id="@+id/AddButtonForClassCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddAssignments" />
    </LinearLayout>

    <Button
        android:id="@+id/submitClassButton111111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/SubmitButton"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/Monday"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/Wednesday"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/Thursday"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/Friday"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>